atualiza o caminho do css

--- a/jogos/paisesCapitais/index.html
+++ b/jogos/paisesCapitais/index.html
@@ -7,7 +7,7 @@
     <meta name="robots" content="noindex">
     <script src="https://livejs.com/live.js"></script>
     <script src ="/guigiusti.github.io/dev/jogos/paisesCapitais/sketch.js"></script>
-    <link href="/paisesCapitais/game.css" rel="stylesheet">
+    <link href="/guigiusti.github.io/dev/jogos/paisesCapitais/game.css" rel="stylesheet">
   </head>
   <body>
     <img/>
