atualiza para estados

--- a/jogos/estadosCapitais/index.html
+++ b/jogos/estadosCapitais/index.html
@@ -13,6 +13,6 @@
     <img/>
     <div id="txt"></div>
     <script src ="/guigiusti.github.io/dev/jogos/estadosCapitais/funcoes.js"></script><br>
-    <button class="button_showhide" id="button_showhide_id" onclick="showhide()">Revelar País e Capital</button>
+    <button class="button_showhide" id="button_showhide_id" onclick="showhide()">Revelar Estado e Capital</button>
   </body>
 </html>
