--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-<h1>Página em Manutenção!</h1>
+<!DOCTYPE html>
+<html>
+    <head>
+            <link rel="icon" type="image/png" href="/guigiusti.github.io/favicon.png"/>
+            <title>Portfólio - Gui Giusti</title>
+            <link href="/guigiusti.github.io/css/indexstyle.css" rel="stylesheet">
+            <link href="/guigiusti.github.io/css/mdstyle.css" rel="stylesheet">
+            <meta charset="utf-8">
+            <meta name="robots" content="noindex">
+    </head>
+    <body>  
+        <script src="https://code.jquery.com/jquery.min.js"></script>
+        <div id="nav-placeholder"></div>
+        <div id="txt"></div>
+        <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+        <script src="/guigiusti.github.io/navbar.js"></script>
+        <script src="/guigiusti.github.io/textos.js"></script>
+    </body>
+</html>
