--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
     <body>  
         <script src="https://code.jquery.com/jquery.min.js"></script>
         <div id="nav-placeholder"></div>
-        <div id="txt"></div>
+        <h1>Teste</h1>
         <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
         <script src="/guigiusti.github.io/navbar.js"></script>
-        <script src="/guigiusti.github.io/textos.js"></script>
     </body>
 </html>
