--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
         <h1>Teste</h1>
         <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
         <script src="/guigiusti.github.io/navbar.js"></script>
+        <script src="/guigiusti.github.io/textos.js"></script>
     </body>
 </html>
