--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
     <body>  
         <script src="https://code.jquery.com/jquery.min.js"></script>
         <div id="nav-placeholder"></div>
-        <h1>Pagina Dev em Manutenção!</h1>
+        <div id="devtxt"></div>
         <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
         <script src="/guigiusti.github.io/navbar.js"></script>
         <script src="/guigiusti.github.io/textos.js"></script>
+        <script src="/guigiusti.github.io/dev/devindex.js"></script>
     </body>
 </html>
