--- a/projects/pomodore/index.html
+++ b/projects/pomodore/index.html
@@ -29,7 +29,7 @@
                 <button id="increaseMaxRound"><i class="fas fa-plus" style="color: #ffffff;"></i></button>
             </div>
         </div> 
-        <script src="index.js"></script>
+        <script src="pomodore.js"></script>
     </body>
 </html>
 
